* Version 0.2
	User interface has been localized; It's now possible to change the main window language at run-time.

* Version 0.1
	First initial public release