@@ -286,11 +286,6 @@
         <translation>&amp;Immagine</translation>
     </message>
     <message>
-        <location filename="../src/mainwindow.ui" line="474"/>
-        <source>Ctrl+R, Ctrl+I</source>
-        <translation></translation>
-    </message>
-    <message>
         <location filename="../src/mainwindow.ui" line="482"/>
         <source>High Quality &amp;Antialiasing</source>
         <translation>&amp;Antialiasing ad alta qualità</translation>
