@@ -1,5 +1,6 @@
 * Version 0.2
-	User interface has been localized; It's now possible to change the main window language at run-time.
+	- User interface has been localized; It's now possible to change the main window language at run-time.
+	- Image render mode has been removed;
 
 * Version 0.1
-	First initial public release
+	- First initial public release
